[package]
name = "cucumber-sort"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1.1"

[dev-dependencies]
big_s = "1.0.2"
camino-tempfile = "1.4.1"
cucumber = "0.21"
tokio = { version = "1.0", features = ["fs","macros", "process", "rt"] }

[[test]]
name = "cuke" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"
