[package]
name = "cucumber-sort"
version = "0.1.0"
edition = "2024"
description = "Sorts steps in Cucumber files"

[dependencies]
ansi_term = "0.12.1"
big_s = "1.0.2"
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3.3"
regex = "1.11.3"

[dev-dependencies]
camino-tempfile = "1.4.1"
cucumber = "0.21"
pretty = { package = "pretty_assertions", version = "1.4.1" }
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.47", features = ["fs", "macros", "process", "rt"] }

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[[test]]
name = "cuke" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"
